manifests/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catnotcat
spec:
  selector:
    app: catnotcat
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: catnotcat-staging
spec:
  selector:
    app: catnotcat-staging
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: catnotcat-dev
spec:
  selector:
    app: catnotcat-dev
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
